{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 44,
  "lineage": "e9517520-b155-ca5d-f5c5-2a1c5ec70e95",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-082bc199f0a8cf6d1",
            "domain": "vpc",
            "id": "eipalloc-0fc18031fc187a373",
            "instance": "i-00ed606ba5fe7aabc",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0ebe709e7dd926813",
            "private_dns": "ip-10-0-1-166.eu-west-2.compute.internal",
            "private_ip": "10.0.1.166",
            "public_dns": "ec2-18-135-41-98.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.41.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eip"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.generated_key",
            "aws_security_group.web_server",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc",
            "tls_private_key.web_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-403e2524",
            "arn": "arn:aws:ec2:eu-west-2:893272080292:instance/i-00ed606ba5fe7aabc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ed606ba5fe7aabc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20211014144121185900000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ebe709e7dd926813",
            "private_dns": "ip-10-0-1-166.eu-west-2.compute.internal",
            "private_ip": "10.0.1.166",
            "public_dns": "ec2-18-134-246-125.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.246.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c10761e3d7bb05c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3cd517267962692",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03da9f96b146e095f"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.web_server",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc",
            "tls_private_key.web_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-403e2524",
            "arn": "arn:aws:ec2:eu-west-2:893272080292:instance/i-001b7dddc25a63aec",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001b7dddc25a63aec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20211014144121185900000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aad6d9bb1a35b8bb",
            "private_dns": "ip-10-0-1-32.eu-west-2.compute.internal",
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-35-178-212-32.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.212.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bdbb1a8bd9052436",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3cd517267962692",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03da9f96b146e095f"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.web_server",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc",
            "tls_private_key.web_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:893272080292:internet-gateway/igw-03f0c4c4026941bf5",
            "id": "igw-03f0c4c4026941bf5",
            "owner_id": "893272080292",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "test-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "test-igw"
            },
            "vpc_id": "vpc-06a93369943ba1bbb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:loadbalancer/app/alb/0889e9bcb618fea0",
            "arn_suffix": "app/alb/0889e9bcb618fea0",
            "dns_name": "alb-1175688492.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:loadbalancer/app/alb/0889e9bcb618fea0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-03da9f96b146e095f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b3cd517267962692"
              },
              {
                "subnet_id": "subnet-0e9662b13fa3909aa"
              }
            ],
            "subnets": [
              "subnet-0b3cd517267962692",
              "subnet-0e9662b13fa3909aa"
            ],
            "vpc_id": "vpc-06a93369943ba1bbb",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.web_server",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:listener/app/alb/0889e9bcb618fea0/241cc9d41e563b48",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:targetgroup/alb-tg/24019e59f826d68e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:listener/app/alb/0889e9bcb618fea0/241cc9d41e563b48",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:loadbalancer/app/alb/0889e9bcb618fea0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.web_server",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:targetgroup/alb-tg/24019e59f826d68e",
            "arn_suffix": "targetgroup/alb-tg/24019e59f826d68e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:targetgroup/alb-tg/24019e59f826d68e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06a93369943ba1bbb"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_security_group.web_server",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:targetgroup/alb-tg/24019e59f826d68e-20211014144400175300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:targetgroup/alb-tg/24019e59f826d68e",
            "target_id": "i-00ed606ba5fe7aabc"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.generated_key",
            "aws_lb.alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.web_server",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc",
            "tls_private_key.web_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:targetgroup/alb-tg/24019e59f826d68e-20211014144400176500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:893272080292:targetgroup/alb-tg/24019e59f826d68e",
            "target_id": "i-001b7dddc25a63aec"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.generated_key",
            "aws_lb.alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.web_server",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc",
            "tls_private_key.web_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03f0c4c4026941bf5",
            "id": "r-rtb-0d1cceb0a089b5bda1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d1cceb0a089b5bda",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:893272080292:route-table/rtb-0d1cceb0a089b5bda",
            "id": "rtb-0d1cceb0a089b5bda",
            "owner_id": "893272080292",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "route-table"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a93369943ba1bbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0961aee1b2ac41fbe",
            "route_table_id": "rtb-0d1cceb0a089b5bda",
            "subnet_id": "subnet-0b3cd517267962692"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:893272080292:security-group/sg-03da9f96b146e095f",
            "description": "Allow standard HTTP, HTTPS, SSH and everything out",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03da9f96b146e095f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_server",
            "name_prefix": "",
            "owner_id": "893272080292",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a93369943ba1bbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:893272080292:subnet/subnet-0b3cd517267962692",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b3cd517267962692",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "893272080292",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "subnet_1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "subnet_1"
            },
            "vpc_id": "vpc-06a93369943ba1bbb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:893272080292:subnet/subnet-0e9662b13fa3909aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e9662b13fa3909aa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "893272080292",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "subnet_2"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "subnet_2"
            },
            "vpc_id": "vpc-06a93369943ba1bbb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:893272080292:vpc/vpc-06a93369943ba1bbb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b67f2fb62bc5022b",
            "default_route_table_id": "rtb-0ebf9ad9c62b277dc",
            "default_security_group_id": "sg-0cd08bc3dfd55c234",
            "dhcp_options_id": "dopt-02457d6a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06a93369943ba1bbb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ebf9ad9c62b277dc",
            "owner_id": "893272080292",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "test-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}